--- a/index.html
+++ b/index.html
@@ -60,3 +60,66 @@
     </header>
 
     <!--                         end header                 -->
+                              <!--                       start  Feature               -->
+    <section class="feature">
+        <h5 class="feature-subtaitle">Our Feature</h5>
+        <h1 class="feature-taitle">A Trusted Name In Bottled Water Industry</h1>
+        <div class="container">
+          <!-- icon 1 -->
+          <article class="feature-icon icon-1">
+            <i class="fas fa-hand-holding-water text-white fa-3x"></i>
+            <a href="#" class="feature-icon-title">Quality Check</a>
+            <p class="feature-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+              repellat deleniti necessitatibus
+            </p>
+            <a href="#" class="feature-btn"
+              >Read More <i class="fa fa-angle-right"></i
+            ></a>
+          </article>
+          <!-- end icon 1 -->
+          <!-- icon 2 -->
+          <article class="feature-icon icon-2">
+            <i c class="fas fa-filter text-white fa-3x"></i>
+            <a href="#" class="feature-icon-title">5 Steps Filtration</a>
+            <p class="feature-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+              repellat deleniti necessitatibus
+            </p>
+            <a href="#" class="feature-btn"
+              >Read More <i class="fa fa-angle-right"></i
+            ></a>
+          </article>
+          <!-- end icon 2 -->
+          <!-- icon 3 -->
+  
+          <article class="feature-icon icon-3">
+            <i class="fas fa-recycle text-white fa-3x"></i>
+            <a href="#" class="feature-icon-title">composition</a>
+            <p class="feature-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+              repellat deleniti necessitatibus
+            </p>
+            <a href="#" class="feature-btn"
+              >Read More <i class="fa fa-angle-right"></i
+            ></a>
+          </article>
+          <!--end icon 3-->
+          <!-- icon 4 -->
+  
+          <article class="feature-icon icon-4">
+            <i class="fas fa-microscope text-white fa-3x"></i>
+            <a href="#" class="feature-icon-title">lap control</a>
+            <p class="feature-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+              repellat deleniti necessitatibus
+            </p>
+            <a href="#" class="feature-btn"
+              >Read More <i class="fa fa-angle-right"></i
+            ></a>
+          </article>
+          <!--  end icon 4 -->
+        </div>
+      </section>
+  
+      <!--                   end  Feature                 -->
