--- a/index.html
+++ b/index.html
@@ -59,67 +59,112 @@
       </div>
     </header>
 
-    <!--                         end header                 -->
-                              <!--                       start  Feature               -->
+    <!--                        end header                 -->
+    <!--                       start  Feature               -->
     <section class="feature">
-        <h5 class="feature-subtaitle">Our Feature</h5>
-        <h1 class="feature-taitle">A Trusted Name In Bottled Water Industry</h1>
-        <div class="container">
-          <!-- icon 1 -->
-          <article class="feature-icon icon-1">
-            <i class="fas fa-hand-holding-water text-white fa-3x"></i>
-            <a href="#" class="feature-icon-title">Quality Check</a>
-            <p class="feature-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
-              repellat deleniti necessitatibus
-            </p>
-            <a href="#" class="feature-btn"
-              >Read More <i class="fa fa-angle-right"></i
-            ></a>
-          </article>
-          <!-- end icon 1 -->
-          <!-- icon 2 -->
-          <article class="feature-icon icon-2">
-            <i c class="fas fa-filter text-white fa-3x"></i>
-            <a href="#" class="feature-icon-title">5 Steps Filtration</a>
-            <p class="feature-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
-              repellat deleniti necessitatibus
-            </p>
-            <a href="#" class="feature-btn"
-              >Read More <i class="fa fa-angle-right"></i
-            ></a>
-          </article>
-          <!-- end icon 2 -->
-          <!-- icon 3 -->
+      <h5 class="feature-subtaitle">Our Feature</h5>
+      <h1 class="feature-taitle">A Trusted Name In Bottled Water Industry</h1>
+      <div class="container">
+        <!-- icon 1 -->
+        <article class="feature-icon icon-1">
+          <i class="fas fa-hand-holding-water text-white fa-3x"></i>
+          <a href="#" class="feature-icon-title">Quality Check</a>
+          <p class="feature-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+            repellat deleniti necessitatibus
+          </p>
+          <a href="#" class="feature-btn"
+            >Read More <i class="fa fa-angle-right"></i
+          ></a>
+        </article>
+        <!-- end icon 1 -->
+        <!-- icon 2 -->
+        <article class="feature-icon icon-2">
+          <i c class="fas fa-filter text-white fa-3x"></i>
+          <a href="#" class="feature-icon-title">5 Steps Filtration</a>
+          <p class="feature-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+            repellat deleniti necessitatibus
+          </p>
+          <a href="#" class="feature-btn"
+            >Read More <i class="fa fa-angle-right"></i
+          ></a>
+        </article>
+        <!-- end icon 2 -->
+        <!-- icon 3 -->
+
+        <article class="feature-icon icon-3">
+          <i class="fas fa-recycle text-white fa-3x"></i>
+          <a href="#" class="feature-icon-title">composition</a>
+          <p class="feature-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+            repellat deleniti necessitatibus
+          </p>
+          <a href="#" class="feature-btn"
+            >Read More <i class="fa fa-angle-right"></i
+          ></a>
+        </article>
+        <!--end icon 3-->
+        <!-- icon 4 -->
+
+        <article class="feature-icon icon-4">
+          <i class="fas fa-microscope text-white fa-3x"></i>
+          <a href="#" class="feature-icon-title">lap control</a>
+          <p class="feature-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
+            repellat deleniti necessitatibus
+          </p>
+          <a href="#" class="feature-btn"
+            >Read More <i class="fa fa-angle-right"></i
+          ></a>
+        </article>
+        <!--  end icon 4 -->
+      </div>
+    </section>
+
+    <!--                   end  Feature                 -->
+                          <!--                   start about                    -->
+    <section class="about">
+        <div class="about-center">
+          <!-- first column -->
+          <div class="first-column">
+            <h1 class="about-title">20 Years Experiance</h1>
+          </div>
   
-          <article class="feature-icon icon-3">
-            <i class="fas fa-recycle text-white fa-3x"></i>
-            <a href="#" class="feature-icon-title">composition</a>
-            <p class="feature-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
-              repellat deleniti necessitatibus
+          <!--  end first column -->
+          <!-- second column -->
+          <div class="second-column">
+            <h5 class="about-subtitle">About Us</h5>
+            <h1 class="about-title1">We Deliver The Quality Water.</h1>
+            <p class="about-text">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum
+              quidem quas totam nostrum! Maxime rerum voluptatem sed, facilis unde
+              a aperiam nulla voluptatibus excepturi ipsam iusto consequuntur
             </p>
-            <a href="#" class="feature-btn"
-              >Read More <i class="fa fa-angle-right"></i
-            ></a>
-          </article>
-          <!--end icon 3-->
-          <!-- icon 4 -->
+            <div class="container1">
+              <div class="box box-1">
+                <i class="fas fa-tint text-white fa-3x"></i>
+                <a href="#" class="about-icon-title">satisfied customer</a>
+                <p class="about-text1">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  provident maiores quisquam.
+                </p>
+              </div>
+              <div class="box box-2">
+                <i class="fas fa-faucet text-white fa 3x"></i>
+                <a href="#" class="about-icon-title">standard product</a>
+                <p class="about-text1">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+                  provident maiores quisquam.
+                </p>
+              </div>
+            </div>
   
-          <article class="feature-icon icon-4">
-            <i class="fas fa-microscope text-white fa-3x"></i>
-            <a href="#" class="feature-icon-title">lap control</a>
-            <p class="feature-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero
-              repellat deleniti necessitatibus
-            </p>
-            <a href="#" class="feature-btn"
-              >Read More <i class="fa fa-angle-right"></i
-            ></a>
-          </article>
-          <!--  end icon 4 -->
+            <a href="#" class="about-btn">read more</a>
+          </div>
         </div>
       </section>
   
-      <!--                   end  Feature                 -->
+      <!--                          end about                 -->
+  </body>
+</html>
