--- a/index.html
+++ b/index.html
@@ -166,5 +166,32 @@
       </section>
   
       <!--                          end about                 -->
+                                 <!--                         start aside                   -->
+    <aside class="aside-center">
+        <div class="aside-container">
+          <div class="aside-icon aside1">
+            <i class="fas fa-thumbs-up fa-3x text-white"></i>
+            <h4 class="aside-subtaitle">happy clients</h4>
+            <span class="asid-number">456+</span>
+          </div>
+          <div class="aside-icon aside2">
+            <i class="fas fa-truck fa-3x text-white"></i>
+            <h4 class="aside-subtaitle">transport</h4>
+            <span class="asid-number">513+</span>
+          </div>
+          <div class="aside-icon aside3">
+            <i class="fas fa-users fa-3x text-white"></i>
+            <h4 class="aside-subtaitle">employees</h4>
+            <span class="asid-number">53+</span>
+          </div>
+          <div class="aside-icon aside4">
+            <i class="fas fa-heart fa-3x text-white"></i>
+            <h4 class="aside-subtaitle">Years Experiance</h4>
+            <span class="asid-number">17+</span>
+          </div>
+        </div>
+      </aside>
+  
+      <!--                       end aside                       -->
   </body>
 </html>
