--- a/index.html
+++ b/index.html
@@ -193,5 +193,90 @@
       </aside>
   
       <!--                       end aside                       -->
+                               <!--                      start Service                    -->
+    <section class="service">
+        <h5 class="service-subtaitle">Our Service</h5>
+        <h1 class="service-title">Protect Your Family with Best Water</h1>
+        <div class="service-center">
+          <!-- first service center -->
+          <div class="blog blog1">
+            <!-- blog 1 -->
+            <a href="#" class="blog-title"> residential waters</a>
+            <p class="blog-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              provident maiores quisquam.
+            </p>
+            <i class="fas fa-hand-holding-water text-white fa-2x mb6"></i>
+          </div>
+          <!-- end blog 1 -->
+          <!-- blog 2 -->
+          <div class="blog blog2">
+            <a href="#" class="blog-title"> commercial waters</a>
+            <p class="blog-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              provident maiores quisquam.
+            </p>
+            <i class="fas fa-dumpster-fire text-white fa-2x"></i>
+          </div>
+          <!--  end blog 2 -->
+          <!-- blog 3 -->
+  
+          <div class="blog blog3">
+            <a href="#" class="blog-title"> filtration plants</a>
+            <p class="blog-text">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              provident maiores quisquam.
+            </p>
+            <i class="fas fa-filter text-white fa-2x mb6"></i>
+          </div>
+        </div>
+        <!-- end blog 3 -->
+        <!-- end first service center -->
+  
+        <!--   second service center -->
+        <div class="service-center2">
+          <!-- blog 4 -->
+          <div class="blog blog4">
+            <i class="fas fa-assistive-listening-systems text-white fa-3x"></i>
+  
+            <a href="#" class="blog-title1"> water softening</a>
+            <p class="blog-text1">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              provident maiores quisquam.
+            </p>
+          </div>
+          <!-- end blog 4 -->
+          <!-- blog 5 -->
+          <div class="blog blog5">
+            <i class="fas fa-recycle text-white fa-3x mb7"></i>
+  
+            <a href="#" class="blog-title1"> market research</a>
+            <p class="blog-text1">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              provident maiores quisquam.
+            </p>
+          </div>
+          <!-- end  blog 5 -->
+          <!-- blog 6 -->
+          <div class="blog blog6">
+            <i class="fas fa-project-diagram text-white fa-3x"></i>
+  
+            <a href="#" class="blog-title1"> project planning</a>
+            <p class="blog-text1">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+              provident maiores quisquam.
+            </p>
+          </div>
+          <!-- end blog 6  -->
+          <!--  end second service center -->
+        </div>
+        <!-- img -->
+        <div class="service-img">
+          <img src="./IMAGES/water.png" alt="" />
+        </div>
+        <!-- end img -->
+      </section>
+  
+      <!--                              end service                     -->
   </body>
 </html>
