--- a/index.html
+++ b/index.html
@@ -278,5 +278,53 @@
       </section>
   
       <!--                              end service                     -->
+                                     <!--                                start Products                 -->
+    <section class="products-center">
+        <h5 class="product-subtaitle">Our Products</h5>
+        <h1 class="product-title">We Deliver Best Quality Bottle Packs.</h1>
+        <div class="product-container">
+          <!-- item 1 -->
+          <div class="product-item itemm1">
+            <img src="./IMAGES/product-3 (1).png" class="product-img" alt="" />
+            <div class="product-data">
+              <p class="product-mb">2L 1 Bottle</p>
+              <a href="#" class="product-mb4"
+                ><h4 class="product-mb3">mineral water bottle</h4></a
+              >
+              <span class="product-price">$35:00</span>
+              <a href="#" class="product-btn">read more</a>
+            </div>
+          </div>
+          <!-- end item 1 -->
+          <!--  item 2 -->
+          <div class="product-item itemm2">
+            <img src="./IMAGES/product-2.png" class="product-img" alt="" />
+            <div class="product-data">
+              <p class="product-mb">4L 2 Bottles</p>
+              <a href="#" class="product-mb4"
+                ><h4 class="product-mb3">ro water bottle</h4></a
+              >
+              <span class="product-price">$70:00</span>
+              <a href="#" class="product-btn">read more</a>
+            </div>
+          </div>
+          <!-- end item 2 -->
+          <!-- item 3 -->
+          <div class="product-item itemm3">
+            <img src="./IMAGES/product-3.png" class="product-img" alt="" />
+            <div class="product-data">
+              <p class="product-mb">6L 3 Bottles</p>
+              <a href="#" class="product-mb4"
+                ><h4 class="product-mb3">uv water bottle</h4></a
+              >
+              <span class="product-price">$100:00</span>
+              <a href="#" class="product-btn"> read more</a>
+            </div>
+          </div>
+          <!-- end item 3 -->
+        </div>
+      </section>
+  
+      <!--                         end Products                        -->
   </body>
 </html>
