--- a/index.html
+++ b/index.html
@@ -326,5 +326,69 @@
       </section>
   
       <!--                         end Products                        -->
+                                <!--                        start blog                        -->
+    <section class="our-blog">
+        <h5 class="our-blog-subtaitle">Our Blog</h5>
+        <h1 class="our-blog-title">Latest Blog & News</h1>
+        <div class="our-blog-container">
+          <!-- skill 1  -->
+          <div class="blog-skills skill1">
+            <!-- <div class="skill1-img"></div> -->
+            <img src="./IMAGES/skill1.jpg" alt="" />
+            <div class="skill-ads">
+              <a href="#" class="skill-ads-3d"
+                >lorem ipsum dolor sit amet consectetur adipisicing elit.unde</a
+              >
+  
+              <p class="skill-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                officiis?
+              </p>
+              <a href="#" class="skill-btn">
+                read more <i class="fa fa-angle-right"></i
+              ></a>
+            </div>
+          </div>
+          <!-- end skill 1 -->
+          <!-- skill 2 -->
+          <div class="blog-skills skill2">
+            <img src="./IMAGES/skill2.jpg" alt="" />
+            <div class="skill-ads">
+              <a href="#" class="skill-ads-3d"
+                >lorem ipsum dolor sit amet consectetur adipisicing elit.unde</a
+              >
+  
+              <p class="skill-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                officiis?
+              </p>
+              <a href="#" class="skill-btn">
+                read more <i class="fa fa-angle-right"></i
+              ></a>
+            </div>
+          </div>
+          <!--  end skill 2 -->
+          <!--  skill 3 -->
+          <div class="blog-skills skill3">
+            <img src="./IMAGES/skill3.jpg" alt="" />
+            <div class="skill-ads">
+              <a href="#" class="skill-ads-3d"
+                >lorem ipsum dolor sit amet consectetur adipisicing elit.unde</a
+              >
+  
+              <p class="skill-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
+                officiis?
+              </p>
+              <a href="#" class="skill-btn">
+                read more <i class="fa fa-angle-right"></i
+              ></a>
+            </div>
+          </div>
+          <!-- end skill 3 -->
+        </div>
+      </section>
+  
+      <!--                           end  blog                        -->
   </body>
 </html>
