--- a/index.html
+++ b/index.html
@@ -390,5 +390,30 @@
       </section>
   
       <!--                           end  blog                        -->
+                                  <!--                          start Our Team                     -->
+    <section class="our-team">
+        <h5 class="team-subtaitle">Our Team</h5>
+        <h1 class="team-taitle">What is Really seo & How Can I Use It?</h1>
+        <div class="team-container">
+          <div class="team-box team1">
+            <!-- <img src="./IMAGES/team-1.jpg" alt=""> -->
+            <h1 class="team-box-taitle">Hard Branots</h1>
+            <p class="team-box-text">CEO & Founder</p>
+          </div>
+          <div class="team-box team2">
+            <h1 class="team-box-taitle">Hard Branots</h1>
+            <p class="team-box-text">CEO & Founder</p>
+          </div>
+          <div class="team-box team3">
+            <h1 class="team-box-taitle">Hard Branots</h1>
+            <p class="team-box-text">CEO & Founder</p>
+          </div>
+          <div class="team-box team4">
+            <h1 class="team-box-taitle">Hard Branots</h1>
+            <p class="team-box-text">CEO & Founder</p>
+          </div>
+        </div>
+      </section>
+      <!--                      end  Our Team                    -->
   </body>
 </html>
