--- a/index.html
+++ b/index.html
@@ -415,5 +415,56 @@
         </div>
       </section>
       <!--                      end  Our Team                    -->
+                             <!--                      start Testimonials               -->
+    <section class="Testimonials">
+        <h5 class="Testimonials-subtaitle">Testimonials</h5>
+        <h1 class="Testimonials-taitle">Our clients reviews.</h1>
+        <div class="Testimonials-container">
+          <!--start column1  -->
+          <div class="Testimonials-column column1">
+            <p class="Testimonials-text">
+              lorem ipsum dolor sit amet consectetur, adipisicing elit. incidunt
+              pariatur officiis quis molestias,sit iure sunt voluptatibus
+              accusantium laboriosam dolore.
+            </p>
+            <div class="Testimonials-img"></div>
+            <h5 class="Testimonials-name">client name</h5>
+            <span class="Testimonials-jop"> profession</span>
+            <!-- stars -->
+            <div class="s2">
+              <i class="fas fa-star s1"></i>
+              <i class="fas fa-star s1"></i>
+              <i class="fas fa-star s1"></i>
+              <i class="fas fa-star s1"></i>
+              <i class="fas fa-star s1"></i>
+            </div>
+            <!-- end stars -->
+          </div>
+          <!--  end column1 -->
+          <!-- start column2 -->
+          <div class="Testimonials-column column2">
+            <p class="Testimonials-text">
+              lorem ipsum dolor sit amet consectetur, adipisicing elit. incidunt
+              pariatur officiis quis molestias,sit iure sunt voluptatibus
+              accusantium laboriosam dolore.
+            </p>
+            <div class="Testimonials-img2"></div>
+            <h5 class="Testimonials-name">client name</h5>
+            <span class="Testimonials-jop"> profession</span>
+            <!-- stars -->
+            <div class="s2">
+              <i class="fas fa-star s1"></i>
+              <i class="fas fa-star s1"></i>
+              <i class="fas fa-star s1"></i>
+              <i class="fas fa-star s1"></i>
+              <i class="fas fa-star s1"></i>
+            </div>
+            <!-- end starts -->
+          </div>
+          <!-- end column2 -->
+        </div>
+      </section>
+  
+      <!--                      end Testimonials             -->
   </body>
 </html>
