--- a/index.html
+++ b/index.html
@@ -466,5 +466,123 @@
       </section>
   
       <!--                      end Testimonials             -->
+                               <!--                       start footer                 -->
+    <footer class="footer">
+        <input
+          type="email"
+          placeholder="Email address to subsceibe"
+          class="footer-email"
+        />
+        <button type="submit" class="footer-btn1">Subsceibe</button>
+        <div class="social-media">
+          <!-- cocial icon start -->
+          <a href="#" class="media"> <i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="media"> <i class="fab fa-twitter"></i></a>
+          <a href="#" class="media"> <i class="fab fa-instagram"></i></a>
+          <a href="#" class="media"> <i class="fab fa-linkedin-in"></i></a>
+          <!-- cocial icon end -->
+        </div>
+        <div class="footer-container">
+          <!-- footer column 1 -->
+          <div class="footer-column foot1">
+            <h4 class="footer-subtaitle sub">
+              <i class="fas fa-hand-holding-water mb1"> </i> acuas
+            </h4>
+  
+            <p class="footer-text Mon">Dolor amet sit justo amet elitr</p>
+            <p class="footer-text Mon">clita ipsum elitr est.Lorem</p>
+            <p class="footer-text Mon">ipsum dolor sit amet,</p>
+            <p class="footer-text Mon">consectetur adipiscing elit</p>
+            <p class="footer-text Mon">consectetur adipiscing elit</p>
+          </div>
+          <!-- end footer column 1 -->
+          <!--  footer column 2 -->
+  
+          <div class="footer-column foot2">
+            <h4 class="footer-subtaitle">about us</h4>
+            <p class="footer-text mon1">
+              <i class="fa fa-angle-right"></i>why choose us
+            </p>
+            <p class="footer-text mon1">
+              <i class="fa fa-angle-right"></i> free water Bottles
+            </p>
+            <p class="footer-text mon1">
+              <i class="fa fa-angle-right"></i>water dispensers
+            </p>
+            <p class="footer-text mon1">
+              <i class="fa fa-angle-right"></i> bottled water coolers
+            </p>
+            <p class="footer-text mon1">
+              <i class="fa fa-angle-right"></i> contact us
+            </p>
+            <p class="footer-text mon1">
+              <i class="fa fa-angle-right"></i> trems & condition
+            </p>
+          </div>
+          <!-- end footer column 2 -->
+          <!--  footer column 3 -->
+  
+          <div class="footer-column foot3">
+            <h4 class="footer-subtaitle">business hours</h4>
+            <h6 class="footer-text fm-1">Mon - Friday:</h6>
+            <p class="footer-sub-md">09.00 am to 07.00 pm</p>
+            <h6 class="footer-text fm-1">saturday:</h6>
+            <p class="footer-sub-md">10.00 am to 07.00 pm</p>
+            <h6 class="footer-text fm-1">vacation:</h6>
+            <p class="footer-sub-md">all sunday is our vacation</p>
+          </div>
+                  <!-- end footer column 3 -->
+  
+          <!--  footer column4  -->
+  
+          <div class="footer-column foot4">
+            <h4 class="footer-subtaitle">contact info</h4>
+            <div class="footer-column4-text">
+              <a href="#" class="footer-text mon1"
+                ><i class="fa fa-map-marker-alt"></i>
+                <p class="footer-4column-adrees">123 Street,NewYork,USA</p>
+              </a>
+              <a href="#" class="footer-text mon1"
+                ><i class="fa fa-envelope"></i>
+                <p class="footer-4column-adrees">info@example.com</p>
+              </a>
+              <a href="#" class="footer-text mon1">
+                <i class="fa fa-envelope"></i>
+                <p class="footer-4column-adrees">info@example.com</p>
+              </a>
+              <a href="#" class="footer-text mon1">
+                <i class="fa fa-phone"></i>
+                <p class="footer-4column-adrees">+012 345 67890</p>
+              </a>
+              <a href="#" class="footer-text mon1">
+                <i class="fa fa-print"></i>
+                <p class="footer-4column-adrees">+012 345 67890</p>
+              </a>
+            </div>
+          </div>
+          <!-- end footer column4 -->
+        </div>
+  
+        <input
+          type="email"
+          placeholder="enter your  email"
+          class="footer-email2"
+        />
+        <button type="submit" class="footer-btn2">signUp</button>
+  
+  
+        <div class="end-footer">
+          <p class="footer-copy">
+            <a href="#" class="mf">
+              &copy;<span class="footer-primary"> Acuas</span></a
+            >All right reserved.
+          </p>
+          <p class="footer-copy2">
+            designed by <a href="#" class="mf"> hTML codex </a> distributed by
+            <a href="#" class="mf"> themeWagon</a>
+          </p>
+        </div>
+      </footer>
+      <!--                         end footer                   -->
   </body>
 </html>
